@@ -1,0 +1,6 @@
+FIND_PACKAGE(YARP REQUIRED)
+
+BEGIN_DEVICE_LIBRARY(foobaz)
+ADD_SUBDIRECTORY(baz)
+ADD_SUBDIRECTORY(foo)
+END_DEVICE_LIBRARY(foobaz)
