@@ -1,0 +1,7 @@
+FIND_PACKAGE(YARP REQUIRED)
+
+BEGIN_DEVICE_LIBRARY(baz)
+ADD_SUBDIRECTORY(bazDevice)
+ADD_SUBDIRECTORY(bazBot)
+END_DEVICE_LIBRARY(baz)
+
