@@ -1,0 +1,7 @@
+FIND_PACKAGE(YARP REQUIRED)
+
+BEGIN_DEVICE_LIBRARY(foo)
+ADD_SUBDIRECTORY(fooBot)
+ADD_SUBDIRECTORY(fooDevice)
+END_DEVICE_LIBRARY(foo)
+
